[tool.poetry]
name = "final_project_n_lavanya"
version = "0.1.0"
description = "API client package for users to call transportation APIs by Singapore's Land Transport Authority"
authors = ["Lavanya <ln2444@columbia.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
